<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusableInTouchMode="true"
    android:id="@+id/main">

    <TextView android:text="@string/inputLabel" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputEditText"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputLabel"
        android:layout_alignParentLeft="true"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="5dp" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/input_button"
        android:id="@+id/inputButton"
        android:layout_marginTop="17dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputEditText"
        android:layout_alignParentLeft="true"
        style="?android:attr/buttonStyleSmall"
        android:background="@drawable/button"
        android:textSize="@dimen/checkBoxText" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Use_flash"
        android:id="@+id/flashCheckBox"
        android:textSize="@dimen/checkBoxText"
        android:layout_alignTop="@+id/audioCheckBox"
        android:layout_alignRight="@+id/customLogin"
        android:layout_alignEnd="@+id/customLogin" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Use_audio"
        android:id="@+id/audioCheckBox"
        android:textSize="@dimen/checkBoxText"
        android:layout_alignTop="@+id/inputButton"
        android:layout_toLeftOf="@+id/flashCheckBox"
        android:layout_toStartOf="@+id/flashCheckBox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_label"
        android:id="@+id/outputLabel"
        android:layout_marginTop="35dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputButton"
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/outputLabel"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentLeft="true"
        android:background="@drawable/rounded_corner"
        android:id="@+id/outputBox">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultText"
            android:layout_gravity="left"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </FrameLayout>

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/flashCheckBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:textSize="@dimen/text_size" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/shareText"
        android:id="@+id/shareButton"
        android:background="@drawable/button"
        android:visibility="gone"
        android:layout_alignTop="@+id/inputButton"
        android:layout_toRightOf="@+id/outputLabel"
        android:layout_toEndOf="@+id/outputLabel"
        android:textSize="@dimen/checkBoxText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="Twitter Login"
        android:id="@+id/customLogin"
        android:textSize="@dimen/checkBoxText"
        android:background="@drawable/button"
        android:layout_below="@+id/inputButton"
        android:layout_alignRight="@+id/outputBox"
        android:layout_alignEnd="@+id/outputBox"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone" />
</RelativeLayout>
